objects/Tax_Group__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>Enter the county if the tax group state is California.</inlineHelpText>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda County</fullName>
                </value>
                <value>
                    <fullName>Alpine County</fullName>
                </value>
                <value>
                    <fullName>Amador County</fullName>
                </value>
                <value>
                    <fullName>Butte County</fullName>
                </value>
                <value>
                    <fullName>Calaveras County</fullName>
                </value>
                <value>
                    <fullName>Colusa County</fullName>
                </value>
                <value>
                    <fullName>Contra Costa County</fullName>
                </value>
                <value>
                    <fullName>Del Norte County</fullName>
                </value>
                <value>
                    <fullName>El Dorado County</fullName>
                </value>
                <value>
                    <fullName>Fresno County</fullName>
                </value>
                <value>
                    <fullName>Glenn County</fullName>
                </value>
                <value>
                    <fullName>Humboldt County</fullName>
                </value>
                <value>
                    <fullName>Imperial County</fullName>
                </value>
                <value>
                    <fullName>Inyo County</fullName>
                </value>
                <value>
                    <fullName>Kern County</fullName>
                </value>
                <value>
                    <fullName>Kings County</fullName>
                </value>
                <value>
                    <fullName>Lake County</fullName>
                </value>
                <value>
                    <fullName>Lassen County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles County</fullName>
                </value>
                <value>
                    <fullName>Madera County</fullName>
                </value>
                <value>
                    <fullName>Marin County</fullName>
                </value>
                <value>
                    <fullName>Mariposa County</fullName>
                </value>
                <value>
                    <fullName>Mendocino County</fullName>
                </value>
                <value>
                    <fullName>Merced County</fullName>
                </value>
                <value>
                    <fullName>Modoc County</fullName>
                </value>
                <value>
                    <fullName>Mono County</fullName>
                </value>
                <value>
                    <fullName>Monterey County</fullName>
                </value>
                <value>
                    <fullName>Napa County</fullName>
                </value>
                <value>
                    <fullName>Nevada County</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Group_Percent__c</fullName>
        <label>Tax Group Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Group_Status__c</fullName>
        <description>Is this Tax Group currently active or inactive?</description>
        <inlineHelpText>Is this Tax Group currently active or inactive?</inlineHelpText>
        <label>Tax Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Tax_Group_Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tax Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>California_County_Required</fullName>
        <active>true</active>
        <description>IF the state selected is California then require a county.</description>
        <errorConditionFormula>AND(ISPICKVAL(State__c,&quot;CA&quot;), ISPICKVAL(County__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>County__c</errorDisplayField>
        <errorMessage>Please select a county.</errorMessage>
    </validationRules>
</CustomObject>